gloo/gateway.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: istio-multi-rev-demo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          # ----------------------- Multi Destination ----------------------
          # Between revisions 1-10-2 and 1-8-6
          # ----------------------------------------------------------------
          multi:
            destinations:
              - weight: 70
                destination:
                  upstream:
                    name: demo-1-8-6-hello-world-8080
                    namespace: gloo-system
              - weight: 30
                destination:
                  upstream:
                    name: demo-1-10-2-hello-world-8080
                    namespace: gloo-system
